2007-07-23  Johan Gonqvist <johan.gronqvist@gmail.com>
	* src/plugins/CountAncestors.py:
	The "number of ancestors" report only takes different persons into account. 
	(#0001076)

2007-07-23  Johan Gonqvist <johan.gronqvist@gmail.com>
	* src/plugins/NarrativeWeb.py:
	Make URL handling on win32 work as in NarrativeWeb.py. (#0001087)

2007-07-23  Don Allingham  <don@gramps-project.org>
	* src/plugins/ExtractCity.py: fix encoding

2007-07-23  Jérôme <romjerome@yahoo.fr>
	* src/plugins/ExtractCity.py: Add French cities

2007-07-23  Brian Matherly <brian@gramps-project.org>
	* src/plugins/IndivComplete.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DetAncestralReport.py:
	* src/plugins/NarrativeWeb.py:
	* src/ReportBase/_Endnotes.py:
	* src/ReportBase/_Bibliography.py:
	Improve Bibliography and use it in Narrative Web report as well.

2007-07-23  Stephane Charette <stephanecharette@gmail.com>
	* src/plugins/FamilyLines.py: added FamilyLines to trunk
	* src/plugins/makefile.am: added FamilyLines
	* po/POTFILES.in: added FamilyLines

2007-07-22  Don Allingham  <don@gramps-project.org>
	* src/plugins/ExtractCity.py: provide selection dialog
	
2007-07-22  Don Allingham  <don@gramps-project.org>
	* configure.in: remove gconf requirement
	* src/Config/_GrampsConfigKeys.py: pylint
	* src/Config/__init__.py: drop gconf, provide upgrade to .ini
	* src/Config/_GrampsGconfKeys.py: pylint
	* src/Config/_GrampsIniKeys.py: pylint
	* src/plugins/EventNames.py: fix name
	* src/Spell.py: pylint
	* data/Makefile.am: remove gconf schema installation

2007-07-21  Don Allingham  <don@gramps-project.org>
	* src/plugins/ExtractCity.py: improved extraction, fix registration
	* src/plugins/EventNames.py: fix registration

2007-07-21  Brian Matherly <brian@gramps-project.org>
	* src/plugins/IndivComplete.py:
	* src/plugins/DetDescendantReport.py:
	* src/plugins/DetAncestralReport.py:
	* src/ReportBase/_Endnotes.py:
	Move superscript from Endnotes to each individual report.
